<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".ui.fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/topPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets10.lottiefiles.com/packages/lf20_xyadoh9h.json" />

    </LinearLayout>

    <Button
        android:id="@+id/profileBackHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-25dp"
        android:backgroundTint="@color/mainScreenGreen"
        android:drawableTint="@color/white"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="Purab Modi"
        app:cornerRadius="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search"
                app:tint="@color/textColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search"
                app:tint="@color/textColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search"
                app:tint="@color/textColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/applyToHostelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:drawableTint="@color/white"
            android:padding="5dp"
            android:text="@string/applyHostel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/profilelogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="4dp"
            android:drawableTint="@color/white"
            android:padding="8dp"
            android:text="@string/logout"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
